
syntax = "proto3";

package mesop.components.icon;

message IconType {
  string font_icon = 1;
}
